@@ -72,7 +72,107 @@
 #pragma wrapgen multiple regex(MPI_Comm_(create|dup|dup_with_info|split|split_type)$) skel/SCOREP_Mpi_CommMgnt.w
 #pragma wrapgen single MPI_Comm_create_group skel/SCOREP_Mpi_CommMgntSubset.w
 #pragma wrapgen single MPI_Comm_create_from_group skel/SCOREP_Mpi_CommMgntSubset.w
-#pragma wrapgen multiple regex(MPI_Intercomm_create(_from_groups)?$) skel/SCOREP_Mpi_CommMgntSubset.w
+
+#if HAVE( MPI_1_0_SYMBOL_PMPI_INTERCOMM_CREATE )
+/**
+ * Declaration of PMPI-symbol for MPI_Intercomm_create
+ */
+int
+PMPI_Intercomm_create( MPI_Comm  local_comm,
+                       int       local_leader,
+                       MPI_Comm  peer_comm,
+                       int       remote_leader,
+                       int       tag,
+                       MPI_Comm* newcomm );
+
+/**
+ * Measurement wrapper for MPI_Intercomm_create
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_CommMgntSubset.w
+ * @note C interface
+ * @note Introduced with MPI-1.0
+ * @ingroup cg
+ * It triggers an enter and an exit event. Additionally, between enter event and exit
+ * event, @ref SCOREP_Definitions_NewInterimCommunicator is called.
+ */
+int
+MPI_Intercomm_create( MPI_Comm local_comm, int local_leader, MPI_Comm peer_comm, int remote_leader, int tag, MPI_Comm* newcomm )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+    const int                        event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
+    const int                        event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_CG );
+    SCOREP_InterimCommunicatorHandle new_comm_handle            = SCOREP_INVALID_INTERIM_COMMUNICATOR;
+    int                              return_val;
+
+    if ( event_gen_active )
+    {
+        SCOREP_MPI_EVENT_GEN_OFF();
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_EnterWrappedRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INTERCOMM_CREATE ] );
+            SCOREP_MpiCollectiveBegin();
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_EnterWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INTERCOMM_CREATE ] );
+        }
+    }
+
+    SCOREP_ENTER_WRAPPED_REGION();
+    return_val = PMPI_Intercomm_create( local_comm, local_leader, peer_comm, remote_leader, tag, newcomm );
+    SCOREP_EXIT_WRAPPED_REGION();
+    if ( *newcomm != MPI_COMM_NULL )
+    {
+        /* The semantic of the peer communicator only requires a useful
+         * communicator on the respective local leader ranks.
+         * To avoid unnecessary duplicates use MPI_COMM_NULL for all other
+         * ranks in the place of the parent/peer communicator.
+         */
+        int rank;
+        PMPI_Comm_rank( local_comm, &rank );
+        if ( local_leader == rank )
+        {
+            new_comm_handle = scorep_mpi_comm_create( *newcomm, peer_comm );
+        }
+        else
+        {
+            new_comm_handle = scorep_mpi_comm_create( *newcomm, MPI_COMM_NULL );
+        }
+    }
+
+    if ( event_gen_active )
+    {
+        if ( event_gen_active_for_group )
+        {
+            if ( new_comm_handle != SCOREP_INVALID_INTERIM_COMMUNICATOR )
+            {
+                SCOREP_CommCreate( new_comm_handle );
+            }
+            else
+            {
+                /* The communicator creation was a local operation, hence we use MPI_COMM_SELF for the collective */
+                new_comm_handle = SCOREP_MPI_COMM_HANDLE( MPI_COMM_SELF );
+            }
+            SCOREP_MpiCollectiveEnd( new_comm_handle,
+                                     SCOREP_INVALID_ROOT_RANK,
+                                     SCOREP_COLLECTIVE_CREATE_HANDLE,
+                                     0,
+                                     0 );
+            SCOREP_ExitRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INTERCOMM_CREATE ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_ExitWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_INTERCOMM_CREATE ] );
+        }
+        SCOREP_MPI_EVENT_GEN_ON();
+    }
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+    return return_val;
+}
+#endif
+
+
+#pragma wrapgen single MPI_Intercomm_create_from_groups skel/SCOREP_Mpi_CommMgntSubset.w
 #pragma wrapgen single MPI_Intercomm_merge skel/SCOREP_Mpi_CommMgnt.w
 
 #pragma wrapgen single MPI_Comm_idup skel/SCOREP_Mpi_CommIdup.w
